--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,20 @@
 2007-10-15  Geoffrey Garen  <ggaren@apple.com>
 
+        Reviewed by Darin Adler.
+        
+        Made function parameters DontDelete. This matches FF and the vague
+        description in ECMA 10.1.3. It's also required in order to make
+        symbol table based lookup of function parameters valid. (If the 
+        parameters aren't DontDelete, you can't guarantee that you'll find
+        them later in the symbol table.)
+
+        [ Patch broken off from http://bugs.webkit.org/show_bug.cgi?id=14868 ]
+
+        * kjs/function.cpp:
+        (KJS::FunctionImp::passInParameters):
+
+2007-10-15  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Maciej Stachowiak.
         
         Some Vector optimizations. These are especially important when using
