--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-15  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix.
+
+        * kjs/nodes.cpp:
+        (NumberNode::evaluate):
+
+2007-10-15  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Darin Adler.
         
         Removed surprising self-named "hack" that made nested functions 
