2007-10-15  Mark Rowe  <mrowe@apple.com>
        Reviewed by Oliver.

        Fix the no-SVG build.

        * DerivedSources.make: Use the correct file as input to generate CSSPropertyNames.h.
        * rendering/RenderObject.cpp:
        (WebCore::objectIsRelayoutBoundary):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26623 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-15  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Oliver.
+
+        Fix the no-SVG build.
+
+        * DerivedSources.make: Use the correct file as input to generate CSSPropertyNames.h.
+        * rendering/RenderObject.cpp:
+        (WebCore::objectIsRelayoutBoundary):
+
 2007-10-15  Darin Adler  <darin@apple.com>
 
         Reviewed by Sam.
