Removed unnecessary #include.
        * API/JSObjectRef.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26625 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-10-15  Geoffrey Garen  <ggaren@apple.com>
 
+        Removed unnecessary #include.
+
+        * API/JSObjectRef.cpp:
+
+2007-10-15  Geoffrey Garen  <ggaren@apple.com>
+
         Double-reverse build fix. My tree was out of date.
 
         * kjs/nodes.cpp:
