2007-10-15  Jon Honeycutt  <jhoneycutt@apple.com>
        Reviewed by Ollie.

        Remove an operator precedence warning on Windows

        * editing/markup.cpp:
        (WebCore::escapeContentText): Use (a) | (b)
        (WebCore::appendEscapedContent): Use (a) | (b)



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26636 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-15  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Reviewed by Ollie.
+
+        Remove an operator precedence warning on Windows
+
+        * editing/markup.cpp:
+        (WebCore::escapeContentText): Use (a) | (b)
+        (WebCore::appendEscapedContent): Use (a) | (b)
+
 2007-10-15  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Darin.
