--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-15  David Kilzer  <ddkilzer@webkit.org>
+
+        Reviewed by Eric.
+
+        - fix http://bugs.webkit.org/show_bug.cgi?id=15002
+          Script to automatically search nightly builds for regressions (bisect-builds)
+
+        * Scripts/bisect-builds: Added.
+
 2007-10-14  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
