Reviewed by Adam Roben
        Cleaned up localizable strings

        * English.lproj/Localizable.strings:
        updated
        * StringsNotToBeLocalized.txt:
        updated
        * WebKit.xcodeproj/project.pbxproj:
        StringsNotToBeLocalized.txt recently moved but project file wasn't updated to match; now it is



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26661 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,3 +1,16 @@
+2007-10-16  John Sullivan  <sullivan@apple.com>
+
+        Reviewed by Adam Roben
+        
+        Cleaned up localizable strings
+
+        * English.lproj/Localizable.strings:
+        updated
+        * StringsNotToBeLocalized.txt:
+        updated
+        * WebKit.xcodeproj/project.pbxproj:
+        StringsNotToBeLocalized.txt recently moved but project file wasn't updated to match; now it is
+
 2007-10-15  Kevin Decker  <kdecker@apple.com>
 
         Reviewed by Darin Adler.
