Reviewed by Adele.
        fixed <rdar://5085596> Accesskeys don't work
        
        * dom/Document.cpp:
        (WebCore::Document::defaultEventHandler):
        accesskey modifier is platform-depedent.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26662 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-16  Alice Liu  <alice.liu@apple.com>
+
+        Reviewed by Adele.
+
+        fixed <rdar://5085596> Accesskeys don't work
+        
+        * dom/Document.cpp:
+        (WebCore::Document::defaultEventHandler):
+        accesskey modifier is platform-depedent.
+
 2007-10-15  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by John.
