--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,19 @@
+2007-10-16  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Darin.
+
+        Fix for <rdar://problem/5517118> REGRESSION: 9A570 - Safari renders 
+        Amazon seller page way too small
+
+        The font size at Amazon was way too small because the calls to 
+        getComputedStyle and getPropertyValue did not cause the div to 
+        attach because there was a pending stylesheet. The fix is to call 
+        updateLayoutIgnorePendingStylesheets() instead of just 
+        updateLayout().
+
+        * css/CSSComputedStyleDeclaration.cpp:
+        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
+
 2007-10-16  David Hyatt  <hyatt@apple.com>
 
         Get transform-origin(x/y) mapped into the front end RenderStyle.  Adds a new StyleTransformData struct that
