--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,17 @@
+2007-10-16  Mitz Pettel  <mitz@webkit.org>
+
+        Reviewed by Dave Hyatt.
+
+        - test for http://bugs.webkit.org/show_bug.cgi?id=15296
+          REGRESSION (r19716-r19719): width not specified for <marquee> tag is causing the alignment issue.
+
+        * fast/block/float/marquee-shrink-to-avoid-floats.html: Added.
+        * platform/mac/fast/block: Added.
+        * platform/mac/fast/block/float: Added.
+        * platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.checksum: Added.
+        * platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.png: Added.
+        * platform/mac/fast/block/float/marquee-shrink-to-avoid-floats-expected.txt: Added.
+
 2007-10-16  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Darin.
