--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,72 @@
+2007-10-16  Darin Adler  <darin@apple.com>
+
+        Reviewed by Maciej and Geoff (and looked over by Eric).
+
+        - http://bugs.webkit.org/show_bug.cgi?id=15519
+          eliminate use of <ctype.h> for processing ASCII
+
+        * ForwardingHeaders/wtf/ASCIICType.h: Added.
+        * ForwardingHeaders/wtf/DisallowCType.h: Added.
+
+        * WebCorePrefix.h: Get rid of inclusion of <ctype.h>.
+        * config.h: Include DisallowCType.h.
+
+        * css/CSSParser.cpp:
+        (WebCore::ParseString::lower):
+        * css/CSSPrimitiveValue.cpp:
+        (WebCore::isCSSTokenizerIdentifier):
+        * css/CSSStyleDeclaration.cpp:
+        (WebCore::propertyID):
+        * html/HTMLSelectElement.cpp:
+        (WebCore::stripLeadingWhiteSpace):
+        * html/HTMLTokenizer.cpp:
+        (WebCore::tagMatch):
+        * loader/FTPDirectoryParser.cpp:
+        (WebCore::parseOneFTPLine):
+        * loader/TextResourceDecoder.cpp:
+        (WebCore::TextResourceDecoder::checkForHeadCharset):
+        * platform/DeprecatedCString.cpp:
+        (WebCore::DeprecatedCString::lower):
+        (WebCore::DeprecatedCString::upper):
+        (WebCore::DeprecatedCString::find):
+        (WebCore::DeprecatedCString::contains):
+        * platform/DeprecatedString.cpp:
+        (WebCore::equalCaseInsensitive):
+        (WebCore::isCharacterAllowedInBase):
+        (WebCore::DeprecatedString::find):
+        (WebCore::DeprecatedString::contains):
+        (WebCore::toIntegralType):
+        * platform/DeprecatedString.h:
+        (WebCore::DeprecatedChar::isSpace):
+        (WebCore::DeprecatedChar::lower):
+        (WebCore::DeprecatedChar::upper):
+        * platform/KURL.cpp:
+        (WebCore::KURL::parse):
+        * platform/StringImpl.cpp:
+        (WebCore::isSpace):
+        (WebCore::StringImpl::containsOnlyWhitespace):
+        (WebCore::StringImpl::isLower):
+        (WebCore::StringImpl::lower):
+        (WebCore::StringImpl::find):
+        (WebCore::StringImpl::reverseFind):
+        (WebCore::equalIgnoringCase):
+        * platform/TextEncodingRegistry.cpp:
+        (WebCore::TextEncodingNameHash::equal):
+        (WebCore::TextEncodingNameHash::hash):
+        (WebCore::atomicCanonicalTextEncodingName):
+        * platform/mac/KeyEventMac.mm:
+        (WebCore::keyIdentifierForKeyEvent):
+        * platform/win/KeyEventWin.cpp:
+        (WebCore::keyIdentifierForWindowsKeyCode):
+        * platform/win/PopupMenuWin.cpp:
+        (WebCore::isASCIIPrintable):
+        (WebCore::PopupWndProc):
+        * plugins/win/PluginViewWin.cpp:
+        (WebCore::capitalizeRFC822HeaderFieldName):
+        * rendering/RenderText.cpp:
+        (WebCore::RenderText::widthFromCache):
+        Use ASCIICType.h functions instead of ctype.h ones.
+
 2007-10-16  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Dave Hyatt.
