- try to fix the GTK build
        * kjs/ustring.cpp: Include ASCIICType.h.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26678 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-10-16  Darin Adler  <darin@apple.com>
 
+        - try to fix the GTK build
+
+        * kjs/ustring.cpp: Include ASCIICType.h.
+
+2007-10-16  Darin Adler  <darin@apple.com>
+
         Reviewed by Maciej and Geoff (and looked over by Eric).
 
         - http://bugs.webkit.org/show_bug.cgi?id=15519
