Reviewed by Adele.
        Fix <rdar://5134108> "fast/forms/select-accesskey.html and focus-selection-input.html fail on Windows"  

        Adding code to choose the right accesskey modifier based on a useragent check for existance of mac platform. 
        * fast/forms/focus-selection-input.html:
        * fast/forms/select-accesskey.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26681 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-16  Alice Liu  <alice.liu@apple.com>
+
+        Reviewed by Adele.
+
+        Fix <rdar://5134108> "fast/forms/select-accesskey.html and focus-selection-input.html fail on Windows"  
+
+        Adding code to choose the right accesskey modifier based on a useragent check for existance of mac platform. 
+        * fast/forms/focus-selection-input.html:
+        * fast/forms/select-accesskey.html:
+
 2007-10-16  Darin Adler  <darin@apple.com>
 
         Reviewed by Adele.
