--- a/WebKit/ChangeLog
+++ b/WebKit/ChangeLog
@@ -1,5 +1,13 @@
 2007-10-16  Darin Adler  <darin@apple.com>
 
+        Reviewed by Adele.
+
+        - moved transpose command implementation into WebCore
+
+        * WebView/WebHTMLView.mm: Removed transpose: and replaced it with standard WebCore forwarding.
+
+2007-10-16  Darin Adler  <darin@apple.com>
+
         Reviewed by Maciej and Geoff (and looked over by Eric).
 
         - http://bugs.webkit.org/show_bug.cgi?id=15519
