Rename WebKit_debug.dll to WebKit.dll for the Debug configuration
 JavaScriptCore:

         Updated testkjs for the rename of WebKit_debug.dll to WebKit.dll for the Debug configuration

         Reviewed by Kevin McCullough.

         * JavaScriptCore.vcproj/debug.vsprops: Added WebKitDLLConfigSuffix.
         * JavaScriptCore.vcproj/debug_internal.vsprops: Ditto.
         * JavaScriptCore.vcproj/release.vsprops: Ditto.
         * JavaScriptCore.vcproj/testkjs/testkjs.vcproj: Use
         WebKitDLLConfigSuffix when referring to WebKit.dll, and fixed a typo
         in the name of icuuc36[_debug].dll.

 WebKitTools:

         Updated for rename of WebKit_debug.dll to WebKit.dll for the Debug configuration

         Reviewed by Kevin McCullough.

         * DumpRenderTree/win/DumpRenderTree.vcproj: Use WebKitDLLConfigSuffix
         when referring to WebKit.dll.
         * DumpRenderTree/win/debug.vsprops: Added WebKitDLLConfigSuffix.
         * DumpRenderTree/win/debug_internal.vsprops: Ditto.
         * DumpRenderTree/win/release.vsprops: Ditto.
         * Scripts/run-safari: Don't pass /debug to Safari anymore because we
         never have a _debug suffix on WebKit.dll.
         * WebKitInitializer/WebKitInitializer.cpp:
         (initializeWebKit): Only use the _debug suffix for WebKit.dll when
         specified.
         * WebKitInitializer/debug_internal.vsprops: Added
         DEBUG_WEBKIT_HAS_SUFFIX preprocessor definition.

 WebKit/win:

         Rename WebKit_debug.dll to WebKit.dll for the Debug configuration

         This is needed so that we can stop having Safari delay-load WebKit,
         which in turn is needed so that Maciej can land a JavaScript speedup
         which breaks delay-loading.

         Reviewed by Kevin McCullough.

         * WebKit.vcproj/WebKit.vcproj: Use WebKitDLLConfigSuffix for the name
         of our DLL and module definition file.
         * WebKit.vcproj/debug.vsprops: Added WebKitDLLConfigSuffix.
         * WebKit.vcpro

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,16 @@
+2007-10-16  Adam Roben  <aroben@apple.com>
+
+        Updated testkjs for the rename of WebKit_debug.dll to WebKit.dll for the Debug configuration
+
+        Reviewed by Kevin McCullough.
+
+        * JavaScriptCore.vcproj/debug.vsprops: Added WebKitDLLConfigSuffix.
+        * JavaScriptCore.vcproj/debug_internal.vsprops: Ditto.
+        * JavaScriptCore.vcproj/release.vsprops: Ditto.
+        * JavaScriptCore.vcproj/testkjs/testkjs.vcproj: Use
+        WebKitDLLConfigSuffix when referring to WebKit.dll, and fixed a typo
+        in the name of icuuc36[_debug].dll.
+
 2007-10-16  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Maciej Stachowiak.
