- try to fix the Qt build
        * config.h: Don't use DisallowCType.h, since it's incompatible with some C++ headers
        that are used in some Qt-specific source files.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26686 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-16  Darin Adler  <darin@apple.com>
 
+        - try to fix the Qt build
+
+        * config.h: Don't use DisallowCType.h, since it's incompatible with some C++ headers
+        that are used in some Qt-specific source files.
+
+2007-10-16  Darin Adler  <darin@apple.com>
+
         Reviewed by Adele.
 
         - fix http://bugs.webkit.org/show_bug.cgi?id=15525
